src/mongo/db/dbdirectclient.cpp
@@ -147,7 +147,8 @@ std::unique_ptr<DBClientCursor> DBDirectClient::find(FindCommandRequest findRequ
                                                      const ReadPreferenceSetting& readPref,
                                                      ExhaustMode exhaustMode) {
     invariant(!findRequest.getReadConcern(),
-              "passing readConcern to DBDirectClient::find() is not supported");
+              "passing readConcern to DBDirectClient::find() is not supported as it has to use the "
+              "parent operation's readConcern");
     return DBClientBase::find(std::move(findRequest), readPref, exhaustMode);
 }
 
@@ -197,7 +198,9 @@ long long DBDirectClient::count(const NamespaceStringOrUUID nsOrUuid,
                                 int limit,
                                 int skip,
                                 boost::optional<BSONObj> readConcernObj) {
-    invariant(!readConcernObj, "passing readConcern to DBDirectClient functions is not supported");
+    invariant(!readConcernObj,
+              "passing readConcern to DBDirectClient functions is not supported as it has to use "
+              "the parent operation's readConcern");
     BSONObj cmdObj = _countCmd(nsOrUuid, query, options, limit, skip, boost::none);
     auto request = OpMsgRequestBuilder::create(nsOrUuid.dbName(), cmdObj);
 
